# Mail2WhatsApp-sever

./: agent.py  app.py  pyproject.toml  styleAgent.py  test.py  test2.py
controllers/: Telegram_Controller.py
routers/: Telegram_Router.py
tools_agent_email/: gmail_tools.py
